# TuxAldo

./: README.md
TuxAldo/: .gitignore  kakebo.db  pyproject.toml
TuxAldo/src/: config.py  main.py  version.py
TuxAldo/src/Database/: database_connector.py
TuxAldo/src/Database/Repositories/: Repository_Month.py  Repository_Transaction.py  Repository_Week.py  Repository_Year.py
TuxAldo/src/UI/Components/: CustomButton2.py  ScrollableList.py  UpperFrame.py  add_trasaction_components.py  balance_frame.py  context_menu_custom.py  period_button.py  type_selector.py
TuxAldo/src/UI/Components/Cards/: Transaction_Card.py  general_card.py
TuxAldo/src/UI/views/: add_Transaccion.py  home_view.py  period_view.py
TuxAldo/src/controllers/: add_transaction_controller.py  home_controller.py  period_controller.py
TuxAldo/src/models/: Month.py  day.py  week.py
TuxAldo/src/utils/: date_utils.py  update_checker.py
