[project]
name = "TuxAldoApp"
version = "0.1.5"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.80.5"
]

[dependency-groups]
dev = [
    "flet-cli>=0.80.5",
    "flet-desktop-light>=0.80.5",
    "flet-web>=0.80.5",
]

[tool.flet]
org = "com.alexescb"
product = "TuxAldo"
company = "Alejandro Escobar Barrios"
copyright = "Copyright (C) 2026 by Alejandro Escobar Barrios"

[tool.flet.app]
path = "src"
icon = "assets/icon.png"
splash = "assets/icon.png"
